continuous-integration/bot-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-bot
  labels:
    app: rostbot
    service: bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rostbot
      service: bot
  template:
    metadata:
      labels:
        app: rostbot
        service: bot
    spec:
      imagePullSecrets:
        - 
          name: gitlab-registry
      containers:
        - name: bot
          image: gitlab.liu.se:5000/tddc88-company-1-2020/deploy/rostbot:latest
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 156Mi
            requests:
              cpu: 200m
              memory: 200AMi
