continuous-integration/index-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-index
  labels:
    app: rostbot
    service: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rostbot
      service: frontend
  template:
    metadata:
      labels:
        app: rostbot
        service: frontend
    spec:
      imagePullSecrets:
        - 
          name: gitlab-registry
      containers:
        - name: index
          image: gitlab.liu.se:5000/tddc88-company-1-2020/deploy/index:latest
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 80Mi
            requests:
              cpu: 10m
              memory: 42Mi
