continuous-integration/backend-flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rostbot
  name: flask-backend-service
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: rostbot
    service: flask-backend
  type: ClusterIP
